fixed the spacing between nav bar and content

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ header {
 	border: none;
 	z-index: 150;
 	box-shadow: 0 2px 3px rgba(0,0,0, .4);
-	margin-bottom: -80px;/* since nav hight is 80px */
+	margin-bottom: -25px;/* since nav hight is 80px (according to website.. so it wouldnt jump)*/
 }
 
 ul{
